# Pleiades

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  fs_entry.rs  main.rs  settings.rs  sidebar.rs  tab.rs  theme.rs
