[package]
name = "pleiades-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
directories = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }
opener = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
trash = "5.2.6"

[build-dependencies]
ico = "0.5.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
winresource = "0.1.31"
